# ProtoCad

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: compile.bat  unlit.vert
assets/shaders/opengl/: checkers.frag  grid.frag  grid.vert  screenSpace.vert  unlit.frag  unlit.vert  voxel.frag
assets/shaders/vulkan/: unlit.vert
source/: CMakeLists.txt  application.cpp  application.h  main.cpp  types.h
source/core/: clock.cpp  clock.h  input.cpp  input.h  io.cpp  io.h  logging.cpp  logging.h  window.cpp
source/editor/: gui_layer.cpp  gui_layer.h  gui_window.cpp  gui_window.h
source/graphics/: graphics_core.cpp  graphics_core.h  graphics_objects.cpp  graphics_objects.h
source/graphics/opengl/: opengl_core.cpp  opengl_core.h
source/graphics/vulkan/: vulkan_core.cpp  vulkan_core.h  vulkan_pipeline.cpp  vulkan_pipeline.h
source/scene/: environment.cpp  environment.h  scene.cpp  scene.h
